[project]
name = "dream-lounge-be"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[all]>=0.128.0",
    "passlib>=1.7.4",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
]

[project.optional-dependencies]
dev = []
